# co2-sensor

./: Cargo.toml
.cargo/: config.toml
app/: Cargo.toml  README.md
app/src/: drivers.rs
app/src/drivers/: api.rs  gpio_nrf.rs  log_defmt_rtt.rs  mono_nrf_rtic.rs  osc_nrf.rs  power_nrf.rs  resources_nrf.rs  rng_nrf.rs  soc_cortex_m.rs  usb_nrf.rs
app/src/drivers/api/: gpio.rs  log.rs  mono.rs  osc.rs  power.rs  rng.rs  soc.rs  usb.rs
app/src/subsys/: usb.rs
app/src/subsys/usb/: class_cdc_ncm_eth.rs  device_nrf.rs
di/: Cargo.toml
di-macros/: Cargo.toml
di/src/: lib.rs  singleton.rs  token.rs
src/: drivers.rs  lib.rs
src/app/: ethernet.rs
src/drivers/: api.rs  clocks.rs  gpio.rs  gpio_nrf.rs  log.rs  log_defmt_rtt.rs  mono_nrf_rtic.rs  monotonic.rs  osc_nrf.rs  power.rs  power_nrf.rs  resources.rs  resources_nrf.rs  rng_nrf.rs  soc.rs  soc_cortex_m.rs  usb_nrf.rs
src/drivers/api/: gpio.rs  mono.rs  osc.rs  rng.rs  usb.rs
