[package]
authors = ["Florian Grandel <fgrandel@code-for-humans.org>"]
name = "co2-sensor"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section = "1.2.0"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "1.0"
fugit = { version = "0.3", features = ["defmt"] }
heapless = { version = "0.8", features = ["defmt-03"] }
nrf52840-hal = "0.18"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = "0.6.4"
rtic = { version = "2.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0", features = ["nrf52840"] }
smoltcp = { version = "0.11", default-features = false, features = [
    "defmt",
    "socket-udp",
    "socket-dhcpv4",
    "proto-ipv4",
] }
static_cell = "2.1"
usb-device = { version = "0.3", features = ["defmt"] }
usbd-ethernet = { path = "../usbd-ethernet" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 0
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
