[package]
authors = ["Florian Grandel <fgrandel@code-for-humans.de>"]
name = "co2-sensor"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
critical-section = "1.2.0"
defmt = "0.3"
defmt-rtt = "0.4"
di = { path = "../di" }
di-macros = { path = "../di-macros" }
embedded-hal = "1.0"
fugit = { version = "0.3", features = ["defmt"] }
heapless = { version = "0.8", features = ["defmt-03"] }
nrf52840-hal = "0.18"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand_core = "0.6.4"
rtic = { version = "2.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.0", features = ["nrf52840"] }
smoltcp = { version = "0.11", default-features = false, features = [
    "defmt",
    "socket-udp",
    "socket-dhcpv4",
    "proto-ipv4",
] }
static_cell = "2.1"
usb-device = { version = "0.3", features = ["defmt"] }
usbd-ethernet = { path = "../../usbd-ethernet" }
